variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value nbPas
nbPas = 0
^Variables:3: error: not found: value nbPas
nbPas = nbPas + 1 
^Variables:7: error: not found: value dejaFait
dejaFait = 0
^Variables:8: error: not found: value dejaFait
while (dejaFait!=nbPas){
       ^Variables:8: error: not found: value nbPas
while (dejaFait!=nbPas){
                 ^Variables:9: error: not found: value dejaFait
  dejaFait=dejaFait+1
  ^