variables.Variables.scala.code
nbPas = 0
while (!estSurBiscuit()) {
nbPas = nbPas + 1 
  avance()
}
prendBiscuit()
dejaFait = 0
while (dejaFait!=nbPas){
  dejaFait=dejaFait+1
}
poseBiscuit